--- a/gradle.properties
+++ b/gradle.properties
@@ -38,7 +38,7 @@ mod_version=1.0.0
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=hu.snowylol.networkjs
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=YourNameHere, OtherNameHere
+mod_authors=Snowylol
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=A KubeJS addon that enables internet fetch functionality for server scripts
 
